--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matcha</title>
+    <title>Matcha Delights - Productos Gourmet de Matcha</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/_sdk/element_sdk.js"></script>
     <style>
@@ -329,7 +329,7 @@
       <section class="py-10 md:py-16 px-4 md:px-6">
         <div class="max-w-5xl mx-auto rounded-2xl shadow-lg p-6 md:p-8 lg:p-12">
           <div class="flex flex-col md:flex-row items-center gap-6 md:gap-8">
-            <div class="text-6xl md:text-8xl">🍵</div>
+            <div class="text-6xl md:text-8xl">💚</div>
             <div class="flex-1 text-center md:text-left">
               <h3
                 class="milk-title font-display text-2xl md:text-3xl font-bold mb-3 md:mb-4"
@@ -793,7 +793,7 @@
             onerror="this.style.display='none'; this.alt='Logo failed to load';"
           />
           <p class="footer-text font-body text-sm md:text-base mb-1 md:mb-2">
-            © 2020 Matchacher Matcha Shop. Delulu Future Dev .
+            © 2019 Matchacher Matcha Shop 💻 Delulufuture.dev
           </p>
           <p class="footer-subtext font-body text-xs md:text-sm">
             Hecho con amor y el mejor matcha japonés
@@ -973,8 +973,8 @@
 
         // Apply primary action color
         const ctaButton = document.getElementById("cta-button");
-        ctaButton.style.backgroundColor = primaryActionColor;
-        ctaButton.style.color = surfaceColor;
+        ctaButton.style.backgroundColor = surfaceColor;
+        ctaButton.style.color = primaryActionColor;
 
         // Apply secondary action color to cards and badges
         const productCards = document.querySelectorAll(".product-card");
@@ -1476,7 +1476,7 @@
           if (b) {
             var d = b.createElement("script");
             d.innerHTML =
-              "window.__CF$cv$params={r:'9b4d7f1b74deeef2',t:'MTc2Njg4NzU2Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";
+              "window.__CF$cv$params={r:'9b4db3b22246eef2',t:'MTc2Njg4OTcyMC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";
             b.getElementsByTagName("head")[0].appendChild(d);
           }
         }
